--- a/src/main/java/ejemploPersistencia/vistas/interfazPrincipalCamarero.form
+++ b/src/main/java/ejemploPersistencia/vistas/interfazPrincipalCamarero.form
@@ -287,6 +287,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonEnviarPedidoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="buttonSnack">
           <Properties>
