--- a/src/main/java/ejemploPersistencia/vistas/PantallaPrincipal.form
+++ b/src/main/java/ejemploPersistencia/vistas/PantallaPrincipal.form
@@ -219,9 +219,6 @@
         </Component>
         <Component class="javax.swing.JCheckBox" name="checkSesionIniciada">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="26" red="59" type="rgb"/>
-            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
@@ -322,6 +319,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="26" red="59" type="rgb"/>
             </Property>
+            <Property name="text" type="java.lang.String" value="jPasswordField1"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textFieldContrasenyaActionPerformed"/>
