--- a/src/main/java/ejemploPersistencia/vistas/interfazCocinero.form
+++ b/src/main/java/ejemploPersistencia/vistas/interfazCocinero.form
@@ -412,6 +412,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonVerPedidoActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
