commit:  enviar pedidos Zeben

--- a/src/main/java/ejemploPersistencia/vistas/CrearUsuario.form
+++ b/src/main/java/ejemploPersistencia/vistas/CrearUsuario.form
@@ -71,9 +71,13 @@
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="buttonIrAIniciarSesion" alignment="0" min="-2" pref="120" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="buttonIrAIniciarSesion" min="-2" pref="120" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                                  <Component id="jLabel8" min="-2" pref="37" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="74" max="32767" attributes="0"/>
                           <Component id="buttonCerrarPrograma" min="-2" pref="133" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="buttonCrearUsuario" min="-2" pref="128" max="-2" attributes="0"/>
@@ -123,6 +127,7 @@
                       <Component id="buttonCerrarPrograma" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
                       <Component id="buttonCrearUsuario" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
                       <Component id="buttonIrAIniciarSesion" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
+                      <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               </Group>
@@ -408,6 +413,11 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonCrearUsuarioActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel8">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jLabel8"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
