--- a/src/main/java/ejemploPersistencia/vistas/interfazPrincipalCamarero.form
+++ b/src/main/java/ejemploPersistencia/vistas/interfazPrincipalCamarero.form
@@ -334,7 +334,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="0">
-                    <Column editable="true" title="" type="java.lang.String"/>
+                    <Column editable="true" title="Producto" type="java.lang.String"/>
                     <Column editable="true" title="Cantidad " type="java.lang.Integer"/>
                     <Column editable="true" title="Precio Ud. (&#x20ac;)" type="java.lang.Double"/>
                     <Column editable="true" title="Precio Total (&#x20ac;)" type="java.lang.Double"/>
